bk_ida/gccida/g3/eliminate_regs
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2748:29: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  eliminate_regs( rtx x, machine_mode mem_mode, rtx insn) 
                            ^
                            enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2751:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v6; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2767:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v22; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2792:4: error: expected ';' after expression
rtx v47; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2792:5: error: use of undeclared identifier 'v47'
rtx v47; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2794:4: error: expected ';' after expression
rtx v49; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2794:5: error: use of undeclared identifier 'v49'
rtx v49; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2796:4: error: expected ';' after expression
rtx v51; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2796:5: error: use of undeclared identifier 'v51'
rtx v51; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2798:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2798:5: error: use of undeclared identifier 'v53'
rtx v53; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2800:4: error: expected ';' after expression
rtx v55; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2800:5: error: use of undeclared identifier 'v55'
rtx v55; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2801:4: error: expected ';' after expression
rtx v56; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2801:5: error: use of undeclared identifier 'v56'
rtx v56; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2807:4: error: expected ';' after expression
rtx v62; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2807:5: error: use of undeclared identifier 'v62'
rtx v62; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2809:6: error: expected ';' after expression
rtvec v64; // rax 
     ^
     ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/reload1.c:2809:7: error: use of undeclared identifier 'v64'
rtvec v64; // rax 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eliminate_regs/src/obj/reload1.o] Error 1
